[package]
name = "spooler"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "*"
serde = { version = "*", features = ["derive", "rc"] }
serde_json = "*"
deno_core = "*"
tokio = { version = "*", features = ["full"] }

[dev-dependencies]
criterion = "*"

[[bench]]
name = "deno"
harness = false
